fix overflow on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,8 @@ body {
   background-color: #f8f9f9;
   color: #33373b;
   width: 100%;
-  height: 100vh;
+  height: 100vh !important;
+  overflow-y: hidden;
 }
 .container {
   display: flex;
